// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zod parse > 'and' 1`] = `"z.string().and(z.number())"`;

exports[`zod parse > 'and' v4 1`] = `"z.string().and(z.number())"`;

exports[`zod parse > 'any' 1`] = `"z.any()"`;

exports[`zod parse > 'any' v4 1`] = `"z.any()"`;

exports[`zod parse > 'array' 1`] = `"z.array(z.union([z.string(), z.number()]))"`;

exports[`zod parse > 'array' v4 1`] = `"z.array(z.union([z.string(), z.number()]))"`;

exports[`zod parse > 'arrayAdvanced' 1`] = `"z.array(z.number().min(1).max(10)).min(3).max(10)"`;

exports[`zod parse > 'arrayAdvanced' v4 1`] = `"z.array(z.number().min(1).max(10)).min(3).max(10)"`;

exports[`zod parse > 'arrayEmpty' 1`] = `"z.array()"`;

exports[`zod parse > 'arrayEmpty' v4 1`] = `"z.array()"`;

exports[`zod parse > 'arrayRef' 1`] = `"z.array(z.lazy(() => Pet))"`;

exports[`zod parse > 'arrayRef' v4 1`] = `"z.array(Pet)"`;

exports[`zod parse > 'arrayRegex' 1`] = `"z.array(z.string().regex(/^[a-zA-Z0-9]{1,13}$/)).min(3).max(10)"`;

exports[`zod parse > 'arrayRegex' v4 1`] = `"z.array(z.string().regex(/^[a-zA-Z0-9]{1,13}$/)).min(3).max(10)"`;

exports[`zod parse > 'blob' 1`] = `"z.instanceof(File)"`;

exports[`zod parse > 'blob' v4 1`] = `"z.instanceof(File)"`;

exports[`zod parse > 'boolean' 1`] = `"z.boolean()"`;

exports[`zod parse > 'boolean' v4 1`] = `"z.boolean()"`;

exports[`zod parse > 'catchall' 1`] = `
"z.object({
    
    }).catchall(z.lazy(() => Pet))"
`;

exports[`zod parse > 'catchall' v4 1`] = `
"z.object({
    
    }).catchall(Pet)"
`;

exports[`zod parse > 'const' 1`] = `"z.literal("")"`;

exports[`zod parse > 'const' v4 1`] = `"z.literal("")"`;

exports[`zod parse > 'date' 1`] = `"z.string().date()"`;

exports[`zod parse > 'date' v4 1`] = `"z.iso.date()"`;

exports[`zod parse > 'datetime' 1`] = `"z.string().datetime()"`;

exports[`zod parse > 'datetime' v4 1`] = `"z.string().datetime()"`;

exports[`zod parse > 'default' 1`] = `".default()"`;

exports[`zod parse > 'default' 2`] = `".default(default)"`;

exports[`zod parse > 'default' v4 1`] = `".default()"`;

exports[`zod parse > 'default' v4 2`] = `".default(default)"`;

exports[`zod parse > 'enum' 1`] = `"z.enum(["A", "B", "C", "2"])"`;

exports[`zod parse > 'enum' v4 1`] = `"z.enum(["A", "B", "C", "2"])"`;

exports[`zod parse > 'enumLiteralBoolean' 1`] = `"z.union([z.literal(true), z.literal(false)])"`;

exports[`zod parse > 'enumLiteralBoolean' v4 1`] = `"z.union([z.literal(true), z.literal(false)])"`;

exports[`zod parse > 'integer' 1`] = `"z.number().int()"`;

exports[`zod parse > 'integer' v4 1`] = `"z.int()"`;

exports[`zod parse > 'matches' 1`] = `"z.string().regex(/^[A-Z]{2}$/)"`;

exports[`zod parse > 'matches' v4 1`] = `"z.string().regex(/^[A-Z]{2}$/)"`;

exports[`zod parse > 'matchesReg' 1`] = `"z.string().regex(/node_modules/)"`;

exports[`zod parse > 'matchesReg' v4 1`] = `"z.string().regex(/node_modules/)"`;

exports[`zod parse > 'max' 1`] = `".max(2)"`;

exports[`zod parse > 'max' v4 1`] = `".max(2)"`;

exports[`zod parse > 'min' 1`] = `".min(2)"`;

exports[`zod parse > 'min' v4 1`] = `".min(2)"`;

exports[`zod parse > 'nullable' 1`] = `".nullable()"`;

exports[`zod parse > 'nullable' v4 1`] = `".nullable()"`;

exports[`zod parse > 'nullableAdditionalProperties' 1`] = `
"z.object({
    
    }).catchall(z.string().nullable())"
`;

exports[`zod parse > 'nullableAdditionalProperties' v4 1`] = `
"z.object({
    
    }).catchall(z.string().nullable())"
`;

exports[`zod parse > 'number' 1`] = `"z.number()"`;

exports[`zod parse > 'number' v4 1`] = `"z.number()"`;

exports[`zod parse > 'object' 1`] = `
"z.object({
    "firstName": z.string().min(2),
"address": z.string().describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'object' v4 1`] = `
"z.object({
    "firstName": z.string().min(2),
"address": z.string().describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'objectAnd' 1`] = `
"z.object({
    "firstName": z.string().min(2).default(test),
"age": z.number().min(3).default(2),
"address": z.string().and(z.number()).describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'objectAnd' v4 1`] = `
"z.object({
    "firstName": z.string().min(2).default(test),
"age": z.number().min(3).default(2),
"address": z.string().and(z.number()).describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'objectArray' 1`] = `
"z.object({
    "ids": z.array(z.string().regex(/^[a-zA-Z0-9]{1,13}$/)).min(3).max(10)
    })"
`;

exports[`zod parse > 'objectArray' v4 1`] = `
"z.object({
    "ids": z.array(z.string().regex(/^[a-zA-Z0-9]{1,13}$/)).min(3).max(10)
    })"
`;

exports[`zod parse > 'objectArrayObject' 1`] = `
"z.object({
    "ids": z.array(z.object({
    "enum": z.enum(["A", "B", "C", "2"])
    })).min(3).max(10)
    })"
`;

exports[`zod parse > 'objectArrayObject' v4 1`] = `
"z.object({
    "ids": z.array(z.object({
    "enum": z.enum(["A", "B", "C", "2"])
    })).min(3).max(10)
    })"
`;

exports[`zod parse > 'objectDates' 1`] = `
"z.object({
    "dateTime": z.string().datetime({ offset: true }),
"date": z.string().date(),
"time": z.string().time(),
"nativeDate": z.date()
    })"
`;

exports[`zod parse > 'objectDates' v4 1`] = `
"z.object({
    "dateTime": z.iso.datetime({ offset: true }),
"date": z.iso.date(),
"time": z.iso.time(),
"nativeDate": z.date()
    })"
`;

exports[`zod parse > 'objectEmpty' 1`] = `
"z.object({
    
    })"
`;

exports[`zod parse > 'objectEmpty' v4 1`] = `
"z.object({
    
    })"
`;

exports[`zod parse > 'objectEnum' 1`] = `
"z.object({
    "version": z.enum(["A", "B", "C", "2"]).min(4).describe("Your address")
    })"
`;

exports[`zod parse > 'objectEnum' v4 1`] = `
"z.object({
    "version": z.enum(["A", "B", "C", "2"]).min(4).describe("Your address")
    })"
`;

exports[`zod parse > 'objectOptional' 1`] = `
"z.object({
    "firstName": z.string().min(2).optional(),
"address": z.string().describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'objectOptional' v4 1`] = `
"z.object({
    "firstName": z.string().min(2).optional(),
"address": z.string().describe("Your address").nullable()
    })"
`;

exports[`zod parse > 'primitiveDate' 1`] = `"z.date()"`;

exports[`zod parse > 'primitiveDate' v4 1`] = `"z.date()"`;

exports[`zod parse > 'ref' 1`] = `"z.lazy(() => Pet)"`;

exports[`zod parse > 'ref' v4 1`] = `"Pet"`;

exports[`zod parse > 'string' 1`] = `"z.string()"`;

exports[`zod parse > 'string' v4 1`] = `"z.string()"`;

exports[`zod parse > 'stringLocal' 1`] = `"z.string().datetime({ local: true })"`;

exports[`zod parse > 'stringLocal' v4 1`] = `"z.iso.datetime({ local: true })"`;

exports[`zod parse > 'stringOffset' 1`] = `"z.string().datetime({ offset: true })"`;

exports[`zod parse > 'stringOffset' v4 1`] = `"z.iso.datetime({ offset: true })"`;

exports[`zod parse > 'time' 1`] = `"z.string().time()"`;

exports[`zod parse > 'time' v4 1`] = `"z.iso.time()"`;

exports[`zod parse > 'tuple' 1`] = `"z.tuple([])"`;

exports[`zod parse > 'tuple' v4 1`] = `"z.tuple([])"`;

exports[`zod parse > 'tupleMulti' 1`] = `"z.tuple([z.string(), z.number()])"`;

exports[`zod parse > 'tupleMulti' v4 1`] = `"z.tuple([z.string(), z.number()])"`;

exports[`zod parse > 'undefined' 1`] = `"z.undefined()"`;

exports[`zod parse > 'undefined' v4 1`] = `"z.undefined()"`;

exports[`zod parse > 'union' 1`] = `"z.union([z.string(), z.number()])"`;

exports[`zod parse > 'union' v4 1`] = `"z.union([z.string(), z.number()])"`;

exports[`zod parse > 'unionOne' 1`] = `"z.string()"`;

exports[`zod parse > 'unionOne' v4 1`] = `"z.string()"`;

exports[`zod parse > 'unknown' 1`] = `"z.unknown()"`;

exports[`zod parse > 'unknown' v4 1`] = `"z.unknown()"`;
